--- a/第9章ファイル.ipynb
+++ b/第9章ファイル.ipynb
@@ -60,7 +60,7 @@
       "source": [
         "import os\n",
         "\n",
-        "os.path.join(\"hoge\", \"huga\", \"piyo,py\")"
+        "os.path.join(\"hoge\", \"huga\", \"piyo.py\")"
       ],
       "execution_count": 1,
       "outputs": [
@@ -68,7 +68,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'hoge/huga/piyo,py'"
+              "'hoge/huga/piyo.py'"
             ]
           },
           "metadata": {
